{
    "name": "Controls",
    "maps": [
        {
            "name": "ActionMap",
            "id": "17e7d173-3b00-4d97-8f16-a818c813cfd7",
            "actions": [
                {
                    "name": "LeftGrab",
                    "type": "Button",
                    "id": "9d1b6523-0c47-4f29-a7b5-3afb2bd475eb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightGrab",
                    "type": "Button",
                    "id": "d37e5907-4a42-4e4d-b7e0-626408f4d529",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftArm",
                    "type": "Value",
                    "id": "c49f4dae-dc5b-4a20-b5b7-9b3a53deb1e5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightArm",
                    "type": "Value",
                    "id": "9682efd7-e5bd-4c1f-8c7a-8887304d4f95",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "900a5ea0-122b-42ab-acd2-1d2f1769d567",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control Scheme",
                    "action": "LeftGrab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d103362-9e47-416a-a197-69768143c304",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control Scheme",
                    "action": "RightGrab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09175f32-aab5-436f-a7ec-2ca1c0a5fbd1",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control Scheme",
                    "action": "LeftArm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db0f6d58-dfa8-418b-9652-3481b3c0c7e5",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control Scheme",
                    "action": "RightArm",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ActionMap1",
            "id": "e4e3f4ec-c4f6-4402-b59a-0132e1beed10",
            "actions": [
                {
                    "name": "LeftGrab",
                    "type": "Button",
                    "id": "540ba958-6726-43d8-9e4a-d0aa6bc07a46",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightGrab",
                    "type": "Button",
                    "id": "285d24bb-6dba-4dea-9edf-191bac8283f9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftArm",
                    "type": "Value",
                    "id": "42d07159-54a3-4b6b-91dd-6186d41ef437",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightArm",
                    "type": "Value",
                    "id": "1f0441c1-e7fb-4a48-9267-0f53b8965e4f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4b5508ef-71ec-4da3-9c65-f656cc0ef5d6",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control Scheme",
                    "action": "LeftGrab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2daa3cc-ee85-468e-95de-71fe904d1e75",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control Scheme",
                    "action": "RightGrab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a1c2360-2077-4774-89df-eac6c55e0d2a",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control Scheme",
                    "action": "LeftArm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d4b82ab0-e67e-4291-a7a4-fafb44083a3d",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control Scheme",
                    "action": "RightArm",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Control Scheme",
            "bindingGroup": "Control Scheme",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}